--- a/operations/myfirst.yaml
+++ b/operations/myfirst.yaml
@@ -8,5 +8,5 @@
        msg: Hello world
    - name: Return all secrets from a path
      debug:
-      msg: "{{ lookup('hashi_vault', 'secret=secrets/QC-one/show/QSB/000 token=hvs.CAESIN7qKl2NKQXrAu8qdTLDClTGCsqCW86FeYmJ9Yb_jCn9Gh4KHGh2cy5ZdTVaT3ZYYklrYUVOM09IeEhha3luZEY url=http://192.168.50.30:8200')}}"
+      msg: "{{ lookup('hashi_vault', 'secret=secrets/QC-one token=hvs.CAESIN7qKl2NKQXrAu8qdTLDClTGCsqCW86FeYmJ9Yb_jCn9Gh4KHGh2cy5ZdTVaT3ZYYklrYUVOM09IeEhha3luZEY url=http://192.168.50.30:8200')}}"
 
