--- a/operations/myfirst.yaml
+++ b/operations/myfirst.yaml
@@ -7,6 +7,6 @@
      ansible.builtin.debug:
        msg: Hello world
    - name: Return all secrets from a path
-      debug:
+      ansible.builtin.debug:
        msg: "{{ lookup('hashi_vault', 'secret=secrets/QC-one token=hvs.1yWlrPDUcBstmHEid25ieE5N url=http://192.168.50.30:8200')}}"
 
