--- a/operations/myfirst.yaml
+++ b/operations/myfirst.yaml
@@ -8,5 +8,5 @@
        msg: Hello world
    - name: Return all secrets from a path
      debug:
-       msg: "{{ lookup('hashi_vault', 'secret=secrets/qc-one/qsb/000 token=hvs.1yWlrPDUcBstmHEid25ieE5N url=http://192.168.50.30:8200')}}"
+       msg: "{{ lookup('community.hashi_vault.vault_kv2_get', 'secret=secrets/qc-one/qsb/000 token=hvs.1yWlrPDUcBstmHEid25ieE5N url=http://192.168.50.30:8200')}}"
 
