--- a/operations/myfirst.yaml
+++ b/operations/myfirst.yaml
@@ -12,7 +12,7 @@
      community.hashi_vault.vault_kv2_get:
         url: http://192.168.50.30:8200
         token: hvs.1yWlrPDUcBstmHEid25ieE5N 
-        path: QC-one/SAP/QC1
+        path: QC-one
       register: response
 
     - name: Display the results
