--- a/operations/myfirst.yaml
+++ b/operations/myfirst.yaml
@@ -12,9 +12,9 @@
      community.hashi_vault.vault_kv2_get:
         url: http://192.168.50.30:8200
         token: hvs.1yWlrPDUcBstmHEid25ieE5N 
-        namespace: QC-one
+        engine_mount_point: QC-one
         path: QSB/000
-      register: response
+      register:  response
 
     - name: Display the results
       ansible.builtin.debug:
