--- a/operations/myfirst.yaml
+++ b/operations/myfirst.yaml
@@ -13,7 +13,7 @@
         url: http://192.168.50.30:8200
         token: hvs.1yWlrPDUcBstmHEid25ieE5N 
         engine_mount_point: QC-one
-        path: QSB/000
+        path: QSB/000/DDIC
       register:  response
 
     - name: Display the results
